--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html#">
         <img src="assets/images/logo.png" class="logo">
-        <span class="logo-text">EXPLORE SAFARIS</span>
+        <span class="logo-text">EXPLORE SAFARIS1</span>
       </a>
       <button class="navbar-toggler position" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
